--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-#character-select, 
+#character-creation, 
 #character-summary, 
 #select-class {
   display: none;
@@ -13,4 +13,8 @@ body {
   margin: auto;
   text-align: center;
   outline: 1px solid green;
+}
+
+#character-creation-nav > ul > li {
+  display: inline-block;
 }
